--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ label {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    max-width: 80%;
+    max-width: 100%;
 }
 
 .select-group {
@@ -137,7 +137,7 @@ input[type="number"]::-webkit-inner-spin-button {
   }
   
   .result {
-    margin-top: 20px;
+    margin-top: 10px;
     padding: 10px;
   }
 
@@ -149,17 +149,17 @@ input[type="number"]::-webkit-inner-spin-button {
     display: flex;
     flex-direction: row-reverse; /* Zeigt den Inhalt von rechts nach links an */
     justify-content: flex-start;
-    margin-top: 20px;
-    padding: 10px;
+    //margin-top: 20px;
+    //padding: 10px;
     border: 1px solid #ddd;
-    background-color: #f9f9f9;
+    //background-color: #f9f9f9;
     font-family: monospace;
     white-space: pre;
     overflow-x: auto;
 }
 
 .step-bit {
-    padding: 0 5px;
+    //padding: 0 5px;
     transition: background-color 0.3s;
 }
 
@@ -170,4 +170,5 @@ input[type="number"]::-webkit-inner-spin-button {
 .binary-coordinates {
     font-family: monospace;
     margin-bottom: 10px;
+    text-align: right; /* Rechtsbündige Ausrichtung */
 }
