--- a/style.css
+++ b/style.css
@@ -138,8 +138,7 @@ input[type="number"]::-webkit-inner-spin-button {
     background-color: #fbfbfb;
     display: flex;
     flex-direction: column; /* Stellt sicher, dass Inhalte innerhalb vertikal gestapelt werden */
-    justify-content: space-between; // abstände gleichmäßig
-    
+    //justify-content: space-between; // abstände gleichmäßig
   }
 
   .animation-section {
