--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ label {
 
 .pointA {
     //padding: 20px;
-    border: 1px solid purple;
+    border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #f9f9f9;
 }
@@ -121,19 +121,19 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .output {
-    border: 1px solid green;
+    //border: 1px solid green;
     display: flex;
     flex-direction: row; // die divs in eine zeile 
     justify-content: space-between; // abstände gleichmäßig
-    gap: 10px; /* optional: fügt Abstand zwischen den Abschnitten hinzu */
-    margin-top: 20px;
+    //gap: 10px; /* optional: fügt Abstand zwischen den Abschnitten hinzu */
+    //margin-top: 20px;
     font-family: monospace;
     font-size: 10pt;
   }
   
   .output-section {
-    width: 48%; /* Breite jeder Sektion, sodass sie nebeneinander passen */
-    border: 1px solid blue;
+    width: 50%; /* Breite jeder Sektion, sodass sie nebeneinander passen */
+    border: 1px solid #ddd;
     padding: 10px;
     background-color: #fbfbfb;
     display: flex;
@@ -142,7 +142,7 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 
   .animation-section {
-    border: 1px solid yellow;
+    //border: 1px solid yellow;
     padding: 10px;
     background-color: #fbfbfb;
     display: flex;
@@ -159,7 +159,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
   .result-section {
     width: 79%; /* Breite jeder Sektion, sodass sie nebeneinander passen */
-    border: 1px solid pink;
+    //border: 1px solid pink;
     padding: 10px;
     background-color: #fbfbfb;
     display: flex;
