--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ input[type="number"], select, button {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 11px;
+    outline: none; /* Entfernt den blauen Fokusrahmen */
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -119,7 +120,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 
 .output {
-    //border: 1px solid green;
+    border: 1px solid green;
     display: flex;
     flex-direction: row; // die divs in eine zeile 
     justify-content: space-between; // abstände gleichmäßig
@@ -157,7 +158,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
   .result-section {
     width: 79%; /* Breite jeder Sektion, sodass sie nebeneinander passen */
-    //border: 1px solid pink;
+    border: 1px solid pink;
     padding: 10px;
     background-color: #fbfbfb;
     display: flex;
@@ -167,6 +168,10 @@ input[type="number"]::-webkit-inner-spin-button {
   .result {
     margin-top: 10px;
     padding: 10px;
+  }
+
+  .resultForLoop {
+    border: 1px solid pink;
   }
 
 .hidden {
@@ -195,10 +200,10 @@ input[type="number"]::-webkit-inner-spin-button {
 .color-y { color: blue; }
 .color-z { color: green; }
 
-.binary-coordinates {
-    //border: 1px solid #ddd;
+.binary{
+    border: 1px solid yellow;
     font-family: monospace;
     font-size: 10pt;
     margin-bottom: 10px;
-    text-align: right; /* Rechtsbündige Ausrichtung */
+    //text-align: right; /* Rechtsbündige Ausrichtung */
 }
