--- a/style.css
+++ b/style.css
@@ -247,3 +247,17 @@ input[type="number"]::-webkit-inner-spin-button {
 .hidden {
     display: none;
 }
+
+.close-btn {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
