--- a/style.css
+++ b/style.css
@@ -9,8 +9,15 @@ h2 {
     margin-bottom: 30px;
 }
 
+h3 {
+    font-family: monospace;
+    font-weight: 500;
+    font-size: 10pt;
+    padding: 5px;
+}
+
 label {
-    font-weight: thin;
+    font-weight: 400;
     margin-right: 10px;
 }
 
@@ -56,6 +63,7 @@ label {
 /* Wenn das Select-Element deaktiviert ist */
 .select-group select:disabled {
     color: white; /* Textfarbe für "x,y" */
+    cursor: auto;
 }
 
 .settings {
@@ -218,7 +226,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .show-code-btn:hover {
     background-color: #e5e5e5;
-    border: none;
+    //border: none;
     //color: white;
 }
 
@@ -244,8 +252,8 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .close-btn {
     position: absolute;
-    top: 17px;
-    right: 12px;
+    top: 10px;
+    right: 10px;
     background-color: transparent;
     border: none;
     cursor: pointer;
