--- a/style.css
+++ b/style.css
@@ -135,11 +135,19 @@ label {
 }
 
 /* Fehlermeldungen */
-.coordError {
+.error {
     color: red;
     font-size: 8pt;
     font-weight: 350;
-    margin-top: 4px; /* Kleiner Abstand zwischen Input und Fehler */
+    margin-top: 5px; /* Kleiner Abstand zwischen Input und Fehler */
+    display: none; /* Standardmäßig versteckt */
+}
+
+.subtractionError {
+    color: red;
+    font-size: 10pt;
+    font-weight: 350;
+    padding: 6px;
     display: none; /* Standardmäßig versteckt */
 }
 
