--- a/style.css
+++ b/style.css
@@ -96,8 +96,11 @@ label {
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
-    resize: vertical;
     overflow: hidden;
+}
+
+.point {
+    resize: none;
 }
 
 .input-section {
