--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
+/* Fehler-Stil (roter rand)*/
+.input-error {
+    border: 1px solid red;
+}
 
 .output {
     display: flex;
